TestApplicationExImporter and some smaller improvements

--- a/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/LanguageTemplatesCommon_de.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/LanguageTemplatesCommon_de.properties
@@ -1,3 +1,4 @@
+Error=Fehler
 Ambiguous=Uneindeutige
 WaitComment=Die Testausführung hat x Sekunde(n) gewartet.
 NoTestDataComment=Es stehen keine Testdaten zur Verfügung. (Wurde die Anweisung 'Führe mit den...' vorher ausgeführt?
