--- a/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/LanguageTemplatesCommon_en.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/LanguageTemplatesCommon_en.properties
@@ -1,3 +1,4 @@
+Error=Error
 Ambiguous=Ambiguous
 WaitComment=Test execution has waited x second(s).
 NoTestDataComment=No test data available. (Is instruction 'With the test data...' called previously?
