PageObject refactored and LanguageTemplateBasics introduced

--- a/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/PageObjectApi_en.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/PageObjectApi_en.properties
@@ -1,4 +1,5 @@
 UnsupportedGuiEventExceptionMessage=The GUI element <b>xx</b> of type <b>yy</b> is not known on page <b>zz</b>.
+UnknownComboboxEntry=Combobox <b>xx</b> does not contain wanted entry <b>yy</b>.
 Button=Button
 TextField=TextField
 ComboBox=ComboBox
