--- a/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/PageObjectApi_de.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/PageObjectApi_de.properties
@@ -1,4 +1,5 @@
 UnsupportedGuiEventExceptionMessage=Das GUI-Element <b>xx</b> vom Typ <b>yy</b> ist auf der Maske <b>zz</b> nicht bekannt.
+UnknownComboboxEntry=Die Auswahlbox <b>xx</b> enthält nicht den auszuwählenden Eintrag <b>yy</b>.
 Button=Schaltfläche
 TextField=Eingabefeld
 ComboBox=Auswahlfeld
