Assymetric PDF comparison introduced

--- a/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/Constants_en.properties
+++ b/workspace/sysnat.test.runtime.environment/src/main/resources/bundles/Constants_en.properties
@@ -12,7 +12,7 @@ ARRANGE_KEYWORD=Arrange/Then
 TECHNICAL_ERROR_TEXT=Failed Technically
 ASSERT_ERROR_TEXT=Wrong Business Condition
 NON=NON
-POSSIBLE_VALUE_IDENTIFIER=Possible Values
+POSSIBLE_VALUE_IDENTIFIER=Values allowed
 EXECUTION_FILTER=ExecutionFilter
 ENVIRONMENT_SETTING_KEY=Environment
 EXECUTION_SPEED_SETTING_KEY=Speed_of_Execution
